tenants/weatherapp-staging/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weatherapp-staging
  namespace: tenant-weatherapp-staging
  annotations:
    external-dns.alpha.kubernetes.io/provider: public
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: gateway-system
      sectionName: http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - weather-staging.ben.fhbgl.study
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
